force-app/main/default/objects/Torc_User__c/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referrer</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipLabel>Torc Users</relationshipLabel>
    <relationshipName>Torc_Users</relationshipName>
    <type>Lookup</type>
</CustomField>