force-app/main/default/objects/Torc_User__c/fields/Referrer_Excluded_from_Referral_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Excluded_from_Referral_Bonus__c</fullName>
    <formula>Referrer__r.Exclude_Referral_Bonus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer Is Torc?</label>
    <type>Checkbox</type>
</CustomField>