force-app/main/default/objects/Torc_User__c/fields/Referrer_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Name__c</fullName>
    <formula>IF( Referrer__c =NULL,
IF( OR(referrerCode__c=NULL,referrerCode__c=&apos;&apos;),&apos;&apos;,  &apos;Unknown&apos;)
,
Referrer__r.Full_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer Name</label>
    <type>Text</type>
</CustomField>