force-app/main/default/objects/Torc_User__c/fields/Referrer_s_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Referrer_s_Cohort__c</fullName>
    <formula>TEXT( Referrer__r.Recruiter_Cohort__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer&apos;s Cohort</label>
    <type>Text</type>
</CustomField>