force-app/main/default/objects/Torc_User__c/fields/Referrer_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Referrer_s_Email__c</fullName>
    <formula>Referrer__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer&apos;s Email</label>
    <type>Text</type>
</CustomField>