force-app/main/default/objects/Torc_User__c/fields/referrerCode__c.field-meta.xml
<CustomField>
    <fullName>referrerCode__c</fullName>
    <label>Referrer Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>