force-app/main/default/objects/Torc_User__c/fields/ReferrerSource__c.field-meta.xml
<CustomField>
    <fullName>ReferrerSource__c</fullName>
    <label>ReferrerSource</label>
    <length>80</length>
    <type>Text</type>
</CustomField>