force-app/main/default/objects/Torc_User__c/fields/Region2__c.field-meta.xml
<CustomField>
    <fullName>Region2__c</fullName>
    <formula>Country__r.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region2</label>
    <type>Text</type>
</CustomField>