force-app/main/default/objects/Torc_User__c/fields/resumeLocation__c.field-meta.xml
<CustomField>
    <fullName>resumeLocation__c</fullName>
    <label>resumeLocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>