force-app/main/default/objects/Torc_User__c/fields/resumeUpdateTime__c.field-meta.xml
<CustomField>
    <fullName>resumeUpdateTime__c</fullName>
    <label>resumeUpdateTime</label>
    <type>DateTime</type>
</CustomField>