force-app/main/default/objects/Torc_User__c/fields/resumeuploadedByRD__c.field-meta.xml
<CustomField>
    <fullName>resumeuploadedByRD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>resumeuploadedByRD</label>
    <type>Checkbox</type>
</CustomField>