force-app/main/default/objects/Torc_User__c/fields/Role_Count__c.field-meta.xml
<CustomField>
    <fullName>Role_Count__c</fullName>
    <description>Number of Roles user has applied to. ie. if applied for both FE and BE, it will be counted as 2</description>
    <inlineHelpText>Number of Roles user has applied to. ie. if applied for both FE and BE, it will be counted as 2</inlineHelpText>
    <label>Role Count</label>
    <summaryForeignKey>Torc_Application__c.Torc_User__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>