force-app/main/default/objects/Torc_User__c/fields/Roles_applied_to__c.field-meta.xml
<CustomField>
    <fullName>Roles_applied_to__c</fullName>
    <label>#Roles applied to</label>
    <summaryForeignKey>Torc_Application__c.Torc_User__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>