force-app/main/default/objects/Torc_User__c/fields/salary__c.field-meta.xml
<CustomField>
    <fullName>salary__c</fullName>
    <label>salary</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>