force-app/main/default/objects/Torc_User__c/fields/SFDC_Contact__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SFDC Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Torc Users</relationshipLabel>
    <relationshipName>Torc_Users</relationshipName>
    <type>Lookup</type>
</CustomField>