force-app/main/default/objects/Torc_User__c/fields/sfdcExternalID__c.field-meta.xml
<CustomField>
    <fullName>sfdcExternalID__c</fullName>
    <label>sfdcExternalID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>