force-app/main/default/objects/Torc_User__c/fields/Skil_With_Experience__c.field-meta.xml
<CustomField>
    <fullName>Skil_With_Experience__c</fullName>
    <label>Skil With Experience</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>