force-app/main/default/objects/Torc_User__c/fields/Skill_Experience__c.field-meta.xml
<CustomField>
    <fullName>Skill_Experience__c</fullName>
    <label>Skill Experience</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>