force-app/main/default/objects/Torc_User__c/fields/Social_User__c.field-meta.xml
<CustomField>
    <fullName>Social_User__c</fullName>
    <description>Social Source Github or Google</description>
    <formula>IF (
   Contains(identity_username__c,&quot;github_&quot;),&quot;Github&quot;, 
   IF(Contains(identity_username__c, &quot;google_&quot;), &quot;Google&quot;, &quot;-&quot;)
 )</formula>
    <inlineHelpText>Social Source Github or Google</inlineHelpText>
    <label>Social User</label>
    <type>Text</type>
</CustomField>