force-app/main/default/objects/Torc_User__c/fields/Specific_Assessment_Mail_Sent__c.field-meta.xml
<CustomField>
    <fullName>Specific_Assessment_Mail_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Specific Assessment Mail Sent?</label>
    <type>Checkbox</type>
</CustomField>