force-app/main/default/objects/Torc_User__c/fields/stateCode__c.field-meta.xml
<CustomField>
    <fullName>stateCode__c</fullName>
    <label>State Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>