force-app/main/default/objects/Torc_User__c/fields/stateName__c.field-meta.xml
<CustomField>
    <fullName>stateName__c</fullName>
    <label>State Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>