force-app/main/default/objects/Torc_User__c/fields/updater__c.field-meta.xml
<CustomField>
    <fullName>updater__c</fullName>
    <label>updater</label>
    <length>80</length>
    <type>Text</type>
</CustomField>