force-app/main/default/objects/Torc_User__c/fields/userName__c.field-meta.xml
<CustomField>
    <fullName>userName__c</fullName>
    <externalId>true</externalId>
    <label>Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>