force-app/main/default/objects/Torc_User__c/fields/userType__c.field-meta.xml
<CustomField>
    <fullName>userType__c</fullName>
    <label>User Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>