force-app/main/default/objects/Torc_User__c/fields/Vetted__c.field-meta.xml
<CustomField>
    <fullName>Vetted__c</fullName>
    <formula>Max_Score_in_Assessment__c &gt;= 70</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vetted?</label>
    <type>Checkbox</type>
</CustomField>