force-app/main/default/objects/Torc_User__c/fields/Vetting_Date__c.field-meta.xml
<CustomField>
    <fullName>Vetting_Date__c</fullName>
    <label>Vetting Date</label>
    <summarizedField>Torc_Assessment__c.assessmentDate__c</summarizedField>
    <summaryForeignKey>Torc_Assessment__c.Torc_User__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>