force-app/main/default/objects/Torc_User__c/fields/Vetting_Time__c.field-meta.xml
<CustomField>
    <fullName>Vetting_Time__c</fullName>
    <formula>Vetting_Date__c -  createdAt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vetting Time (days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>