force-app/main/default/objects/Torc_User__c/fields/Virtual_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Team_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Virtual Team Member</label>
    <type>Checkbox</type>
</CustomField>