force-app/main/default/objects/Torc_User__c/fields/visibility__c.field-meta.xml
<CustomField>
    <fullName>visibility__c</fullName>
    <label>Visibility</label>
    <length>50</length>
    <type>Text</type>
</CustomField>