force-app/main/default/objects/Torc_User__c/fields/WhatsAppAllowed__c.field-meta.xml
<CustomField>
    <fullName>WhatsAppAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WhatsAppAllowed</label>
    <type>Checkbox</type>
</CustomField>