force-app/main/default/objects/Torc_User__c/listViews/Codealike_Users.listView-meta.xml
<ListView>
    <fullName>Codealike_Users</fullName>
    <columns>NAME</columns>
    <columns>userName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>userName__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Codealike Users</label>
</ListView>