force-app/main/default/objects/Torc_User__c/listViews/Github_Users.listView-meta.xml
<ListView>
    <fullName>Github_Users</fullName>
    <columns>NAME</columns>
    <columns>identity_username__c</columns>
    <columns>availability__c</columns>
    <columns>cityName__c</columns>
    <columns>agreedToTerms__c</columns>
    <columns>userType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>identity_username__c</field>
        <operation>startsWith</operation>
        <value>github_</value>
    </filters>
    <label>Github Users</label>
</ListView>